Simplify default configuration